fix post privacy dropdown clipping

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -84,5 +84,6 @@ body {
 }
 
 .drawer .drawer__inner {
+  overflow: visible;
   height:inherit;
 }
